Изменено модальное окно, отвечающее за чат с создателем в i was invaited

--- a/css/all-events.css
+++ b/css/all-events.css
@@ -88,6 +88,9 @@ position: relative;
 .modal-body2 {
     background-color: #fff;
 }
+.modal-body3 {
+    background-color: #E6ECF5;
+}
 
 .li-no_event-menu {
 position: relative;
