--- a/css/platform-modal.css
+++ b/css/platform-modal.css
@@ -7,6 +7,12 @@
   margin: 0 auto;
   left: 25px;
 }
+.platform-modal3 {
+  max-width: 45rem;
+  position: relative;
+  margin: 0 auto;
+  left: 50px;
+}
 .platform-modal__body {
   height: 300px;
   padding: 1.5rem;
@@ -14,6 +20,12 @@
 }
 .platform-modal__body2 {
   height: 550px;
+  padding: 1.5rem;
+  position: relative;
+  
+}
+.platform-modal__body3 {
+  height: 200px;
   padding: 1.5rem;
   position: relative;
   
@@ -217,6 +229,7 @@
 .modal-header__close-btn--event2 {
   left: calc(100%);
 }
+
 .modal-header__close-btn--event {
   left: calc(100% + 24rem);
 }
