--- a/css/profile.css
+++ b/css/profile.css
@@ -2436,25 +2436,25 @@ filter: brightness(0.8)
 }
 .modal-title-chat_name {
   position: relative;
-  bottom: 10px; 
-  right:20px;
+  margin-right: 15px;
   font-size: 16px;
   margin-top: 0;
   margin-bottom: 0;
   line-height: 1.5;
   font-size: 1.25rem;
   font-weight: 500;
+  float: left;
 }
 .modal-title-chat_online {
   position: relative;
-  top: 10px;
-  right:225px;
+  margin-right: 85px;
   font-size: 12px;
   margin-top: 0;
   margin-bottom: 0;
   line-height: 1.5;
   font-size: 1.25rem;
   font-weight: 500;
+  float: left;
 }
 .modal-content-creator {
   position: relative;
@@ -2480,7 +2480,8 @@ filter: brightness(0.8)
 }
 .modal-title-chat_photo {
   position: relative; 
-  left: 25px;
+  left: 35px;
+  float: left;
 }
 .lnk-margin {
   margin-left: 5px
