--- a/css/platform-modal.css
+++ b/css/platform-modal.css
@@ -13,6 +13,12 @@
   margin: 0 auto;
   left: 50px;
 }
+.platform-modal-delete {
+  max-width: 45rem;
+  position: relative;
+  margin: 0 auto;
+  left: 50px;
+}
 .platform-modal__body {
   height: 300px;
   padding: 1.5rem;
@@ -28,6 +34,7 @@
   height: 200px;
   padding: 1.5rem;
   position: relative;
+  width: 600px;
   
 }
 .platform-modal__from-group {
