Изменено модальное окно assistant в i was invited и исправлено отображение модального окна в delete в my events

--- a/css/all-events.css
+++ b/css/all-events.css
@@ -219,3 +219,9 @@ left: 27px;
     bottom: 7px;
     font-weight: bold;
 }
+.open-assistant, .creator-photo, .creator-name {
+    cursor: pointer;
+}
+.body-assistants {
+    width: 180px;
+}
