--- a/css/profile-modals.css
+++ b/css/profile-modals.css
@@ -43,6 +43,21 @@
   overflow: auto;
   
 }
+.modal-wrapper-assistant {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgb(109, 162, 254, 0.65);
+  display: none;
+  align-items: center;
+  justify-content: space-around;
+  z-index: 100;
+  padding: 10rem 0 0 0;
+  overflow: auto;
+  
+}
 .modal {
   background-color: #fff;
   height: 398px;
@@ -82,6 +97,17 @@
   height: 200px;
   display: none;
   width: 100%;
+  max-width: 52rem;
+  border-radius: 3px;
+  position: relative;
+  right: 100px;
+  bottom: 100px;
+}
+.modal-assistant {
+  background-color: #fff;
+  height: 400px;
+  display: none;
+  width: 200px;
   max-width: 52rem;
   border-radius: 3px;
   position: relative;
@@ -134,6 +160,17 @@
   border-radius: 3px 3px 0 0;
   background-color: #6DA2FE;
   color: #fff;
+  font-size: 16px;
+  width: 100%;
+  padding: 1.5rem;
+  position: relative;
+  border-bottom: 2px solid var(--border-color);
+}
+.modal-header-assistant {
+  border-radius: 3px 3px 0 0;
+  background-color: #fff;
+  color: #515365;
+  font-weight: bold;
   font-size: 16px;
   width: 100%;
   padding: 1.5rem;
@@ -541,6 +578,9 @@ input, text {border: none}
 .modal-delete {
   display: block;
 }
+.modal-assistant {
+  display: block;
+}
 .modal__text {
   font-size: 1.4rem;
   margin-bottom: 2.5rem;
@@ -809,21 +849,6 @@ input, text {border: none}
   font-weight: bold;
   color: #515365;
 }
-        /* свойства модального окна по умолчанию */
-        .modal-delete {
-          position: fixed; /* фиксированное положение */
-          top: 0px;
-          right: 0;
-          bottom: 0;
-          left: 0;
-          background: rgba(109,162,254,0.5); /* цвет фона */
-          z-index: 1050;
-          opacity: 0; /* по умолчанию модальное окно прозрачно */
-          -webkit-transition: opacity 400ms ease-in;
-          -moz-transition: opacity 400ms ease-in;
-          transition: opacity 400ms ease-in; /* анимация перехода */
-          pointer-events: none; /* элемент невидим для событий мыши */
-      }
 
       /* при отображении модального окно */
       .modal-delete:target {
@@ -922,20 +947,7 @@ input, text {border: none}
   font-weight: bold;
   font-size: 20px
 }
-.modal-assistant {
-  position: fixed; /* фиксированное положение */
-  top: 0px;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(109,162,254,0.5); /* цвет фона */
-  z-index: 1050;
-  opacity: 0; /* по умолчанию модальное окно прозрачно */
-  -webkit-transition: opacity 400ms ease-in;
-  -moz-transition: opacity 400ms ease-in;
-  transition: opacity 400ms ease-in; /* анимация перехода */
-  pointer-events: none; /* элемент невидим для событий мыши */
-}
+
 
 /* при отображении модального окно */
 .modal-assistant:target {
@@ -989,30 +1001,10 @@ input, text {border: none}
 }
 
 /* свойства для заголовка модального окна */
-.modal-header-assistant {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  padding: 15px;
-  border-bottom: 1px solid #eceeef;
-  background-color: white;
-  color: #ACAFC2;
-  height: 60px;
-  font-weight: bold;
-  font-size: 20px;
-  text-decoration: none
-}
-.modal-header-assistant a {
-  text-decoration: none
+
+.modal-body-assistant a {
+  text-decoration: none;
+  color: #515365;
 }
 
 .modal-title-assistant {
@@ -1038,16 +1030,6 @@ input, text {border: none}
   opacity: .75;
 }
 
-/* свойства для блока, содержащего основное содержимое окна */
-.modal-body-assistant{
-  position: relative;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
-  padding: 15px;
-  background-color: white;
-}
 .modal-btn-assistant{
 border: none;
 background-color: #FF5E3A;
