--- a/css/platform-modal.css
+++ b/css/platform-modal.css
@@ -251,14 +251,14 @@
   left: calc(100% + 24rem) !important;
 }
 
-.modal-body2::-webkit-scrollbar {
+.platform-modal__body2::-webkit-scrollbar {
   width: 0.5rem;
 }
-.modal-body2::-webkit-scrollbar-track {
+.platform-modal__body2::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
 }
-.modal-body2::-webkit-scrollbar-thumb {
+.platform-modal__body2::-webkit-scrollbar-thumb {
   background: var(--text-color-2);
   border-radius: 10px;
 }
@@ -273,7 +273,7 @@
   background: var(--text-color-2);
   border-radius: 10px;
 }
-.modal-body2 {
+.platform-modal__body2 {
   overflow-y: scroll;
 }
 .modal-body-assistant {
