--- a/css/platform-modal.css
+++ b/css/platform-modal.css
@@ -1,11 +1,12 @@
 .platform-modal {
-  max-width: 46rem;
+  max-width: 38rem;
 }
 .platform-modal2 {
   max-width: 45rem;
   position: relative;
   margin: 0 auto;
   left: 25px;
+  top: 10px;
 }
 .platform-modal3 {
   max-width: 45rem;
