--- a/css/platform-modal.css
+++ b/css/platform-modal.css
@@ -1,5 +1,5 @@
 .platform-modal {
-  max-width: 38rem;
+  max-width: 38rem !important;
 }
 .platform-modal2 {
   max-width: 45rem;
@@ -64,6 +64,7 @@
 }
 .platform-modal__input {
   width: 100%;
+  max-width: 350px;
   height: 4rem;
   border-radius: 3px;
   border: 1px solid var(--border-color-2);
@@ -76,10 +77,12 @@
 .platform-modal__input--date {
   background-image: url(../svg/date-input-icon.svg);
   max-width: 48%;
+  width: 165px;
   border: 1px solid #D8DBE6;
   border-radius: 2px;
   background-repeat: no-repeat;
   background-position: 90%;
+  width: 350px;
 }
 .platform-modal__from-group-wrapper {
   display: flex;
@@ -88,10 +91,12 @@
 
 .platform-modal__input--time {
   max-width: 48%;
+  width: 165px;
   left: 172px;
   bottom: 47px;
   border: 1px solid #D8DBE6;
   border-radius: 2px;
+  width: 350px;
 }
 .platform-modal__input--time-zone {
   max-width: 48%;
