--- a/css/all-events.css
+++ b/css/all-events.css
@@ -193,7 +193,7 @@ left: 27px;
     font-size: 14px;
     float: right ;
     position: relative;
-     right: 100pxpx;
+     right: 100px;
      white-space: nowrap;
       overflow: hidden;
        text-overflow: ellipsis;
