--- a/css/whiteboard.css
+++ b/css/whiteboard.css
@@ -11,7 +11,7 @@
   width: 5rem;
   height: 100%;
   background-color: var(--platform-bg-grey);
-  top: 0;
+  top: 30px;
   position: absolute;
   padding-top: 4.5rem;
   z-index: 5;
@@ -27,7 +27,7 @@
   align-items: center;
   justify-content: space-around;
   cursor: pointer;
-  padding: 0.8rem;
+  padding: 1.6rem;
   position: relative;
 }
 .Whiteboard-Tool_Wrapper:after {
@@ -35,7 +35,7 @@
   position: absolute;
   display: block;
   right: 0.6rem;
-  top: 1.1rem;
+  top: 2rem;
   width: 0.5rem;
   height: 0.8rem;
   background-image: url(../svg/whiteboard/more.svg);
@@ -83,4 +83,11 @@
     background-color: #fff;
     width: calc(100% - 5rem);
     height: calc(100% - 4.3rem);
+}
+.Whiteboard_top_panel {
+  float: left;
+  margin-top: 43px;
+  width: 100%;
+  background-color: #F5F5F5;
+  height: 25px;
 }
