--- a/css/whiteboard.css
+++ b/css/whiteboard.css
@@ -1,3 +1,6 @@
+#body {
+overflow: none;
+}
 .Whiteboard {
   width: 100%;
   height: 100%;
@@ -88,7 +91,8 @@
 .Whiteboard_top_panel {
   float: left;
   margin-top: 43px;
-  width: 100%;
+  margin-left: 50px;
+  width: 97%;
   background-color: #F5F5F5;
   height: 25px;
 }
@@ -190,6 +194,7 @@ background-color: rgba(229, 237, 245, 0.2);;
   text-align: center
 }
 .allowed-text {font-size: 12px}
+.allowed-text_link {font-size: 12px;float: left;position: relative;right: 10px;}
 .allowed-list {margin-left: 25px}
 .modal-wrapper__video{
   position: fixed;
@@ -306,3 +311,388 @@ background-color: rgba(229, 237, 245, 0.2);;
   border: 1px solid #E6ECF5;
   border-top: none;
 }
+.modal-wrapper__library{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: none;
+  align-items: center;
+  justify-content: space-around;
+  z-index: 100;
+  padding: 10rem 0 0 0;
+  overflow: auto;
+}
+.platform-modal__library{
+  display: block;
+  max-width:45rem !important;
+  position: relative;
+  margin: 0 auto;
+  right: 250px;
+}
+.modal-header__library{
+  border-radius: 3px 3px 0 0;
+  color: #515365;
+  font-size: 16px;
+  width:800px;
+  height: 45px;
+  padding: 1.5rem;
+  position: relative;
+  border: 1px solid #9A9FBF;
+  font-weight: bold;
+  font-size: 16px;
+}
+.modal-body__library{
+  background-color: #fff;
+  width: 800px;
+  height: 482px;
+  border: 1px solid #9A9FBF;
+  border-top: none;
+}
+.tabs_content  {width:300px; height:200px;float:left;  width: 615px;
+  height: 482px;}
+.tabs_content>div { display:none; }
+#tabs>a.current { background:rgba(229, 237, 245, 0.6)}
+.content-links {
+  float:left;
+  clear:both;
+  color: #515365;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 16px;
+  margin-left: 25px;
+  position: relative;
+  bottom: 15px;
+  padding-top: 10px
+}
+.tabs__links {
+  float: left;
+  border-right: 1px solid #9A9FBF;
+  width: 180px;
+  height: 482px;
+}
+.tabs__border {
+  float: right;
+  width: 620px;
+  height: 482px;
+}
+.modal-body_container-library {
+  position: relative;
+  right: 15px;
+  bottom: 15px;
+  width: 145%;
+  height: 183%;
+}
+.tabs-icon {
+  margin-right: 10px
+}
+.content-library {
+  padding-left: 20px;
+  position: relative;
+  right: 5px;
+  width: 101%;
+  height: 90%;
+  overflow-y: scroll;
+}
+.content-library::-webkit-scrollbar {
+  width: 0.5rem;
+}
+.content-library::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+.content-library::-webkit-scrollbar-thumb {
+  background: var(--text-color-2);
+  border-radius: 10px;
+}
+
+.content-library__document {
+  float: left;
+  border: 1px solid #E6ECF5;
+  width: 105px;
+  height: 120px;
+  margin-top: 15px;
+  margin-left: 10px;
+}
+.content-library__photo {
+  float: left;
+  border: 1px solid #E6ECF5;
+  width: 105px;
+  height: 120px;
+  margin-top: 15px;
+  margin-left: 10px;
+}
+.content-library__video{
+  float: left;
+  border: 1px solid #E6ECF5;
+  width: 105px;
+  height: 120px;
+  margin-top: 15px;
+  margin-left: 10px;
+}
+.content-library__audio {
+  float: left;
+  border: 1px solid #E6ECF5;
+  width: 105px;
+  height: 120px;
+  margin-top: 15px;
+  margin-left: 10px;
+}
+.content-library__test {
+  float: left;
+  border: 1px solid #E6ECF5;
+  width: 105px;
+  height: 120px;
+  margin-top: 15px;
+  margin-left: 10px;
+}
+.library-image__document {
+float: left;
+background: #08B53C;
+width: 100%;
+height: 83px;
+}
+.library-image__photo {
+float: left;
+background: #6DA2FE;
+width: 100%;
+height: 83px;
+}
+.library-image__video {
+float: left;
+background: #FF5E3A;
+width: 100%;
+height: 83px;
+}
+.library-image__audio {
+float: left;
+background: #515365;
+width: 100%;
+height: 83px;
+}
+.library-image__test {
+float: left;
+background: #FFCE54;
+width: 100%;
+height: 83px;
+}
+.library-document-image {
+  float: left;
+  margin-left: 28px;
+  margin-top: 12px
+}
+.library-text {
+float: left;
+border-top: 1px solid #E6ECF5;
+width: 100%;
+height: 37px; 
+font-size: 10px;
+color: #515365;
+}
+.file-name-text {float: left;;margin-left: 5px;margin-top: 5px;}
+.format-text {float: left;margin-left: 5px;}
+.library-checkbox {
+  float: right;
+  position: relative;
+  right: 5px;
+  top: 5px;
+}
+.checkbox{
+	display: none;
+}
+.checkbox-custom{
+	width: 20px;
+	height: 20px;
+	border: 2px solid #D8DBE6;
+	border-radius: 3px;
+	position: relative;
+}
+.checkbox-custom,
+.label {
+	display: inline-block;
+    vertical-align: middle;
+    margin-left: 5px;
+    font-size: 12px;
+    background: #fff;
+}
+.checkbox:checked + .checkbox-custom::before{
+	content: "";
+	display: block;
+	position: absolute;
+	top: 6px;
+	right: 6px;
+	bottom: 6px;
+	left: 5.4px;
+	background: #FF5E3A;
+    border-radius: 2px;
+    width: 5px;
+    height: 5px;
+}
+.checkbox-custom,
+.checkbox:checked + .checkbox-custom::before {
+	border-radius: 50%;
+}
+.library-buttons {float: right;margin-top: 10px;margin-right: 25px}
+.library__delete-button {
+  float: left;
+  margin-right: 10px;
+  background-color: #FF5E3A;
+  color: #fff;
+  border: none;
+  width: 100px;
+  height: 28px;
+}
+.library__add-class-button {
+  float: left;
+  background-color: #fff;
+  color: #515365;
+  border: 1px solid #9A9FBF;
+  width: 100px;
+  height: 28px;
+}
+.link-to-video {
+  float: right;
+  width: 277px;
+  height: 32px;
+  border: 1px solid #9A9FBF;
+  margin-right: 15px;
+  border-radius: 3px;
+}
+.link-to-video__input {
+  float: left;
+  width: 195px;
+  height: 100%;
+}
+.link-to-video__button {
+  float: left;
+  border-left: 1px solid #9A9FBF;
+  width: 80px;
+  height: 100%;
+}
+.play-link {
+  width: 100%;
+  height: 100%;
+  color: #515365;
+  font-size: 12px;
+  border: none;
+  background-color: #fff;
+}
+.input-link {
+  color: #515365;
+  outline: none;
+  width: 99%;
+  height: 100%;
+  float: left;
+  margin-left: 5px
+}
+.title-link-text {
+  float: left;
+  color: #515365;
+  font-weight: bold;
+  margin-left: 30px;
+  font-size: 14px
+}
+.fonts {float: left;margin-top: 3px;}
+.top-panel__border {float: left;margin-top: 5px;}
+.fonts__dropdown{  
+  font-size: 12px;
+  background-color: #f5f5f5;
+  width: 100px;
+  font-size: 12px;
+}
+.fonts-size {float: left;margin-top: 3px;}
+.fonts-size__dropdown{  
+  font-size: 12px;
+  background-color: #f5f5f5;
+  width: 45px;
+  font-size: 12px;
+}
+.fonts-style {
+  float: left;
+  width: 60px;
+}
+.words-style_b {font-weight: bold;float: left;margin-left: 10px;font-size: 12px;margin-top: 5px;}
+.words-style_i {font-style: italic;float: left;margin-left: 10px;font-size: 12px;margin-top: 5px;}
+.words-style_u {text-decoration: underline;float: left;margin-left: 10px;font-size: 12px;margin-top: 5px;}
+.font-color {
+  float: left;
+  width: 40px;
+}
+.square-color {
+  margin-left: 10px;
+  margin-top: 9px;
+  float: left;
+  width: 7px;
+  height: 7px;
+}
+.arrow-color {
+  margin-left: 10px;
+  margin-top: 11px;
+  float: left;
+  width: 6px;
+  height: 4px;
+}
+.arrow-down {
+  margin-left: 10px;
+  margin-top: 11px;
+  float: left;
+  width: 6px;
+  height: 4px;
+}
+.align-text {
+  float: left;
+  width: 50px;
+  height: 100%;
+}
+.align-text-left {
+  float: left;
+  margin-top: 7px;
+  margin-left: 15px;
+}
+.mark-text {  
+  float: left;
+  width: 50px;
+  height: 100%;
+}
+.mark-text-more {
+  float: left;
+  margin-top: 7px;
+  margin-left: 15px;
+}
+.inner-align-text__container {
+  position: absolute;
+  width: 200px;  
+  top: 68px;
+  left: 255px;
+}
+.inner-mark-text__container {
+  position: absolute;
+  width: 200px;  
+  top: 62px;
+  left: 335px;
+}
+.inner-align-text {
+  display: none;
+  float: left;
+  position: relative;
+  margin-left: 15px;
+
+}
+.inner-mark-text {
+  display: none;
+  float: left;
+  position: relative;
+  margin-top: 7px;
+  margin-left: 15px;
+}
+
+.inner-align-text.when_align-text_hover {
+  display: block;
+}
+.inner-align-text:hover{display: block}
+
+.inner-mark-text.when_mark-text_hover {
+  display: block;
+}
+.inner-mark-text:hover{display: block}
