--- a/css/whiteboard.css
+++ b/css/whiteboard.css
@@ -617,14 +617,15 @@ color: #515365;
 .words-style_u {text-decoration: underline;float: left;margin-left: 10px;font-size: 12px;margin-top: 5px;}
 .font-color {
   float: left;
-  width: 40px;
+  width: 35;
 }
-.square-color {
+.jscolor {
   margin-left: 10px;
-  margin-top: 9px;
+  margin-top: 5px;
   float: left;
-  width: 7px;
-  height: 7px;
+  width: 5px;
+  height: 12px;
+  border: none;
 }
 .arrow-color {
   margin-left: 10px;
@@ -696,3 +697,197 @@ color: #515365;
   display: block;
 }
 .inner-mark-text:hover{display: block}
+.library-upload {
+  float: right;
+  position: relative;
+  right: 10px;
+  bottom: 5px;
+}
+.modal-wrapper__poll{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: none;
+  align-items: center;
+  justify-content: space-around;
+  z-index: 100;
+  padding: 10rem 0 0 0;
+  overflow: auto;
+}
+.platform-modal__poll{
+  display: block;
+  max-width:45rem !important;
+  position: relative;
+  margin: 0 auto;
+  right: 250px;
+}
+.modal-header__poll{
+  border-radius: 3px 3px 0 0;
+  color: #515365;
+  font-size: 16px;
+  width:800px;
+  height: 45px;
+  padding: 1.5rem;
+  position: relative;
+  border: 1px solid #9A9FBF;
+  font-weight: bold;
+  font-size: 16px;
+}
+.modal-body__poll{
+  background-color: #fff;
+  width: 800px;
+  height: 524px;
+  border: 1px solid #9A9FBF;
+  border-top: none;
+}
+.Library {
+  height: 6rem;
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 2rem;
+  color: var(--text-color);
+  padding: 0 2rem;
+}
+.Test {
+  height: 6rem;
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 2rem;
+  color: var(--text-color);
+  padding: 0 2rem;
+}
+.pull-container {
+  float: left;
+  margin: 0 auto;
+  width: 773px;
+  position: relative;
+  right: 3px;
+  height: 455px;
+  border: 1px solid #9A9FBF;
+  overflow-y: scroll;
+}
+.add-question__span {
+  font-size: 14px;
+  float: left;
+  margin-left: 10px;
+  margin-top: 5px;
+}
+.textarea-question{
+  float: left;
+  clear: both;
+  margin-left: 10px;
+  width: 723px;
+  height: 70px;
+  margin-top: 5px;
+  border: 1px solid #F2F5FA;
+  color: #ACAFC2;
+}
+.textarea-question::-webkit-input-placeholder{  color: #ACAFC2;}
+.text-answer{
+  float: left;
+  clear: both;
+  margin-left: 10px;
+  width: 605px;
+  height: 25px;
+  margin-top: 10px;
+  border: 1px solid #F2F5FA;
+  color: #ACAFC2;
+  
+}
+.text-answer::-webkit-input-placeholder{  color: #ACAFC2;}
+.add-annswer-container{
+  float: left;
+  max-height: 100%;
+}
+.add-select {
+  float: left;
+  margin-left: 15px;
+  margin-top: 10px;
+  width: 75px;
+  height: 25px;
+  border: 1px solid #F2F5FA;
+}
+.add-answer-select{
+  -webkit-appearance: none;
+  border: none;
+  width: 80%;
+  height: 100%;
+  background-color: #fff;
+  color: #ACAFC2;
+  position: relative;
+  left: 15px;
+}
+
+.add-answer-button:active {
+  background-color: #F2F5FA;
+}
+.pull-container::-webkit-scrollbar {
+  width: 0.5rem;
+}
+.pull-container::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+.pull-container::-webkit-scrollbar-thumb {
+  background: var(--text-color-2);
+  border-radius: 10px;
+}
+.answer-text {
+  font-size: 12px;
+  color: #ACAFC2;
+}
+.add-answer-text {
+  float: left;
+  margin-top: 7px;
+  margin-left: 10px;
+  color: #acafc2;
+  font-size: 12px;
+}
+.add-answer {
+  clear: both;
+  float: left;
+  width: 75px;
+  height: 25px;
+}
+.add-answer-plus {
+  color: #9A9FBF;
+  margin-top: 8px;
+  margin-left: 10px;
+  float: left;
+}
+.add-question-text {
+  float: left;
+  margin-top: 7px;
+  margin-left: 10px;
+  font-size: 14px;
+}
+.add-question {
+  clear: both;
+  float: left;
+  width: 175px;
+  height: 25px;
+}
+.add-question-plus {
+  color: #515365;
+  margin-top: 8px;
+  margin-left: 10px;
+  float: left;
+}
+.poll__save-button {
+  position: relative;
+  left: 225px;
+  float: right;
+  background-color: #fff;
+  color: #515365;
+  border: 1px solid #9A9FBF;
+  width: 100px;
+  height: 28px;
+}
