--- a/css/profile-modals.css
+++ b/css/profile-modals.css
@@ -86,7 +86,7 @@
   height: 200px;
   display: none;
   width: 100%;
-  max-width: 52rem;
+  max-width: 52rem !important;
   border-radius: 3px;
   position: relative;
   right: 100px;
