--- a/css/whiteboard.css
+++ b/css/whiteboard.css
@@ -174,10 +174,11 @@ border-right: 1px solid #E6ECF5;
 .modal-body__upload-browser:hover {
 background-color: rgba(229, 237, 245, 0.2);;
 }
+.Library {display: none;}
 .modal-body__upload-library {
   float: left;
   width: 300px;
-  height: 100%;
+  height: 100%!important;
 cursor: pointer;
 }
 .modal-body__upload-library:hover {
