--- a/css/platform.css
+++ b/css/platform.css
@@ -40,6 +40,7 @@ body {
   background-color: var(--platform-bg-grey);
   color: var(--text-color);
   padding: 0;
+  overflow-y: hidden;
   margin: 0;
 }
 .PlatformNav {
